--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,11 @@
   <artifactId>calculatrice</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Calculatrice</name>
+  <dependencies>
+  <dependency>
+  <groupId>com.formdev</groupId>
+  <artifactId>flatlaf</artifactId>
+  <version>3.5</version>
+  </dependency>
+  </dependencies>
 </project>
